<resources>
    <string name="app_name">SaveMoment</string>
    <string name="moment_image">moment image</string>
    <string name="moment_title">Momentik Title</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="add_moment_toolbar">Добавить</string>
    <string name="update_moment_toolbar">Обновить</string>
    <string name="done">Done</string>
    <string name="add_image_from">Add Image From</string>
    <string name="from_gallery">Из Галереи</string>
    <string name="from_camera">Из Камеры</string>
    <string name="authorities">com.example.savemoment.provider</string>
    <string name="save_moment">Save Moment</string>
    <string name="save_in_cloud">Сохранять в облаке</string>
    <string name="save_locally">Сохранять локально</string>
    <string name="sign_up">Регистрация</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите Пароль</string>
    <string name="have_account">Уже есть аккаунт</string>
    <string name="sign_in">Авторизация</string>
    <string name="no_account">У меня нет аккаунта</string>
</resources>