<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.ui.welcome.view.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:layout_gravity="center"
        android:textColor="@color/black"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:text="@string/save_moment" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveInCloud"
        style="@style/AppOutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_in_cloud" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveInLocal"
        style="@style/AppOutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/save_locally" />


</LinearLayout>